# PDF-to-Markdown-Docling

./: .gitignore  AGENTS.md  README.md  audit_utils.py  conversion_utils.py  date_cleanup.py  export_utils.py  long_report.docling.json  long_report.md  main.py  picture_kpi_extract.py  pymupdf_spacing_fix.py  pyproject.toml  quality.py  spacing_fix.py  spacing_issues_report.txt  table_fixes.py  text_spacing_issues_debug.txt  tmp_main.md  tmp_off.md  whitespace_fix.py
docs/: DIAGRAMS.md  FEATURE_MATRIX.md  PIPELINE_OVERVIEW.md
examples/: long_report.docling.json
scripts/: audit_pdf_vs_md.py  quality_report.py
src/pdf_to_markdown_docling/: __init__.py  cli.py  conversion_utils.py  date_cleanup.py  picture_kpi_extract.py  pymupdf_spacing_fix.py  spacing_fix.py  table_fixes.py  text_normalize.py  whitespace_fix.py
tests/: conftest.py
tests/integration/: test_conversion_tables.py
tests/unit/: test_audit_utils.py  test_date_cleanup.py  test_export_utils.py  test_picture_kpi_extract.py  test_pymupdf_spacing_fix.py  test_table_fixes.py  test_text_normalize.py  test_whitespace_fix.py
tools/: audit_pdf_vs_md.py  quality_report.py
