[project]
name = "pdf-to-markdown-docling"
version = "0.1.0"
description = "Convert financial PDF reports to Markdown for RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.66.0",
    "pymupdf>=1.26.7",
    "pytest>=8.3.4",
    "torch==2.9.1+cu128",
    "torchvision==0.24.1+cu128",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
